--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.16.4",
     "mongoose": "^5.5.6",
     "mysql": "^2.16.0",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "request": "^2.88.0"
   }
 }
